<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/write_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_to_tag" >
        </Button>
    </LinearLayout>

    <EditText
        android:id="@+id/note"
        android:layout_width="fill_parent"
        android:layout_height="76dp"
        android:gravity="top"
        android:text="@string/default_note_text" >
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_start_serve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/btn_start_serve_str" />

        <Button
            android:id="@+id/btn_stop_serve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="102dp"
            android:layout_marginTop="5dp"
            android:text="@string/btn_stop_serve_str" />
    </LinearLayout>

    

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="100dp" >

        <TextView
            android:id="@+id/tv_show_log"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="4dp"
            android:text="@string/tv_log" />

    </ScrollView>

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="fill_parent"
        android:layout_height="272dp"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon" />

</LinearLayout>